@@ -8,6 +8,7 @@
 - compat-28: Add ~color-dark-p~.
 - compat-28: Add ~with-window-non-dedicated~.
 - compat-29: Add ~plist-get~ generalized variable.
+- compat-29: Add ~compiled-function-p~.
 
 * Release of "Compat" Version 29.1.2.0
 
